@@ -91,16 +91,24 @@ function Invoke-PowerShell
         $Runtime
     )
     
+    $powerShellv3Installed = Test-Path -Path HKLM:\SOFTWARE\Microsoft\PowerShell\3
     $currentRuntime = 'v{0}.0' -f $PSVersionTable.CLRVersion.Major
+    if( $powerShellv3Installed )
+    {
+        $currentRuntime = 'v4.0'
+    }
 
     if( -not $Runtime )
     {
         $Runtime = $currentRuntime
     }
 
-    if(  $PSCmdlet.ParameterSetName -eq 'ScriptBlock' -and $Runtime -eq 'v2.0' -and $PSVersionTable.PSVersion -ge '3.0' )
+    if(  $PSCmdlet.ParameterSetName -eq 'ScriptBlock' -and `
+         $Host.Name -eq 'Windows PowerShell ISE Host' -and `
+         $Runtime -eq 'v2.0' -and `
+         $powerShellv3Installed )
     {
-        Write-Error ('PowerShell v{0} can''t run script blocks under .NET {1}. Please save your script block into a file and re-run Invoke-PowerShell using the `FilePath` parameter.' -f `
+        Write-Error ('The PowerShell ISE v{0} can''t run script blocks under .NET {1}. Please run from the PowerShell console, or save your script block into a file and re-run Invoke-PowerShell using the `FilePath` parameter.' -f `
                         $PSVersionTable.PSVersion,$Runtime)
         return
     }
@@ -109,7 +117,7 @@ function Invoke-PowerShell
     $activationConfigDir = Join-Path $env:TEMP ([IO.Path]::GetRandomFileName())
     $activationConfigPath = Join-Path $activationConfigDir powershell.exe.activation_config
     $originalCOMAppConfigEnvVar = [Environment]::GetEnvironmentVariable( $comPlusAppConfigEnvVarName )
-    if( $currentRuntime -ne $Runtime )
+    if( -not $powerShellv3Installed -and $currentRuntime -ne $Runtime )
     {
         $null = New-Item -Path $activationConfigDir -ItemType Directory
         @"
@@ -136,12 +144,21 @@ function Invoke-PowerShell
         {
             $ArgumentList = @()
         }
-        $powerShellArgs = @( '-NoProfile', '-NoLogo' )
+        $powerShellArgs = @( )
+        if( $powerShellv3Installed -and $Runtime -eq 'v2.0' )
+        {
+            $powerShellArgs += '-Version'
+            $powerShellArgs += '2.0'
+        }
+
+        $powerShellArgs += '-NoProfile'
+
         if( $OutputFormat )
         {
             $powerShellArgs += '-OutputFormat'
             $powerShellArgs += $OutputFormat
         }
+
         if( $PSCmdlet.ParameterSetName -eq 'ScriptBlock' )
         {
             & $psPath $powerShellArgs -Command $ScriptBlock -Args $ArgumentList
@@ -154,7 +171,7 @@ function Invoke-PowerShell
                 $powerShellArgs += $ExecutionPolicy
             }
             Write-Verbose ('{0} {1} -Command {2} {3}' -f $psPath,($powerShellArgs -join " "),$FilePath,($ArgumentList -join ' '))
-            & $psPath $powerShellArgs -Command $FilePath $ArgumentList
+            & $psPath $powerShellArgs -File $FilePath $ArgumentList
             Write-Verbose ('LASTEXITCODE: {0}' -f $LASTEXITCODE)
         }
     }
